syntax = "proto3";

package charon;

import "mnemosyne.proto";
import "protot.proto";
import "nilt.proto";

service RPC {
    // Authentication

    rpc Login(LoginRequest) returns (LoginResponse) {};
    rpc Logout(LogoutRequest) returns (LogoutResponse) {};
    rpc IsAuthenticated(IsAuthenticatedRequest) returns (IsAuthenticatedResponse) {};
    rpc Subject(SubjectRequest) returns (SubjectResponse) {};

    // Authorization

    rpc IsGranted(IsGrantedRequest) returns (IsGrantedResponse) {};
    rpc BelongsTo(BelongsToRequest) returns (BelongsToResponse) {};

    // User

    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {};
    rpc ModifyUser(ModifyUserRequest) returns (ModifyUserResponse) {};
    rpc GetUser(GetUserRequest) returns (GetUserResponse) {};
    rpc ListUsers(ListUsersRequest) returns (ListUsersResponse) {};
    rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse) {};

    rpc ListUserPermissions(ListUserPermissionsRequest) returns (ListUserPermissionsResponse) {};
    rpc SetUserPermissions(SetUserPermissionsRequest) returns (SetUserPermissionsResponse) {};
    
    rpc ListUserGroups(ListUserGroupsRequest) returns (ListUserGroupsResponse) {};
    rpc SetUserGroups(SetUserGroupsRequest) returns (SetUserGroupsResponse) {};

    // Permissions

    rpc RegisterPermissions(RegisterPermissionsRequest) returns (RegisterPermissionsResponse) {};
    rpc ListPermissions(ListPermissionsRequest) returns (ListPermissionsResponse) {};
    rpc GetPermission(GetPermissionRequest) returns (GetPermissionResponse) {};

    // Group

    rpc CreateGroup(CreateGroupRequest) returns (CreateGroupResponse) {};
    rpc ModifyGroup(ModifyGroupRequest) returns (ModifyGroupResponse) {};
    rpc GetGroup(GetGroupRequest) returns (GetGroupResponse) {};
    rpc ListGroups(ListGroupsRequest) returns (ListGroupsResponse) {};
    rpc DeleteGroup(DeleteGroupRequest) returns (DeleteGroupResponse) {};

    rpc ListGroupPermissions(ListGroupPermissionsRequest) returns (ListGroupPermissionsResponse) {};
    rpc SetGroupPermissions(SetGroupPermissionsRequest) returns (SetGroupPermissionsResponse) {};
}

// --------------
// ---- AUTH ----
// --------------

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    mnemosyne.Token token = 1;
}

message LogoutRequest {
    mnemosyne.Token token = 1;
}

message LogoutResponse {}

message IsAuthenticatedRequest {
    mnemosyne.Token token = 1;
}

message IsAuthenticatedResponse {
    bool authenticated = 1;
}

message IsGrantedRequest {
    int64 user_id = 1;
    string permission = 2;
}

message IsGrantedResponse {
    bool granted = 1;
}

message BelongsToRequest {
    int64 user_id = 1;
    int64 group_id = 2;
}

message BelongsToResponse {
    bool belongs = 1;
}

message SubjectRequest {
    mnemosyne.Token token = 1;
}

message SubjectResponse {
    int64 id = 1;
    string username = 2;
    string first_name = 3;
    string last_name = 4;
    repeated string permissions = 5;
    bool is_superuser = 6;
    bool is_active = 7;
    bool is_stuff = 8;
    bool is_confirmed = 9;
}

// --------------
// ---- USER ----
// --------------

message User {
    int64 id = 1;
    string username = 2;
    string first_name = 3;
    string last_name = 4;
    bool is_superuser = 5;
    bool is_active = 6;
    bool is_staff = 7;
    bool is_confirmed = 8;
    protot.Timestamp created_at = 9;
    nilt.Int64 created_by = 10;
    protot.Timestamp updated_at = 11;
    nilt.Int64 updated_by = 12;
}

message CreateUserRequest {
    string username = 1;
    string plain_password = 2;
    bytes secure_password = 3;
    string first_name = 4;
    string last_name = 5;
    nilt.Bool is_superuser = 6;
    nilt.Bool is_active = 7;
    nilt.Bool is_staff = 8;
    nilt.Bool is_confirmed = 9;
}

message CreateUserResponse {
    User user = 1;
}

message GetUserRequest {
    int64 id = 1;
}

message GetUserResponse {
    User user = 1;
}

message ListUsersRequest {
    reserved 4 to 99;
    nilt.Bool is_superuser = 1;
    nilt.Bool is_staff = 2;
    nilt.Int64 created_by = 3;
    nilt.Int64 offset = 100;
    nilt.Int64 limit = 101;
    map<string, bool> sort = 102;
}

message ListUsersResponse {
    repeated User users = 1;
}

message DeleteUserRequest {
    int64 id = 1;
}

message DeleteUserResponse {
    int64 affected = 1;
}

message ModifyUserRequest {
    int64 id = 1;
    nilt.String username = 2;
    nilt.String plain_password = 3;
    bytes secure_password = 4;
    nilt.String first_name = 5;
    nilt.String last_name = 6;
    nilt.Bool is_superuser = 7;
    nilt.Bool is_active = 8;
    nilt.Bool is_staff = 9;
    nilt.Bool is_confirmed = 10;
}

message ModifyUserResponse {
    User user = 1;
}

message ListUserPermissionsRequest {
    int64 id = 1;
}

message ListUserPermissionsResponse {
    repeated string permissions = 1;
}

message SetUserPermissionsRequest {
    repeated string permissions = 1;
}

message SetUserPermissionsResponse {
    repeated string created = 1;
    repeated string removed = 2;
    repeated string untouched = 3;
}

message ListUserGroupsRequest {
    int64 id = 1;
}

message ListUserGroupsResponse {
    repeated Group groups = 1;
}

message SetUserGroupsRequest {
	int64 user_id = 1;
    repeated int64 groups = 2;
}

message SetUserGroupsResponse {
    int64 created = 1;
    int64 removed = 2;
    int64 untouched = 3;
}

// ---------------------
// ---- PERMISSIONS ----
// ---------------------

message RegisterPermissionsRequest {
    repeated string permissions = 1;
}

message RegisterPermissionsResponse {
    int64 created = 1;
    int64 removed = 2;
    int64 untouched = 3;
}

message ListPermissionsRequest {
    reserved 6 to 99;
    nilt.String subsystem = 1;
    nilt.String module = 2;
    nilt.String action = 3;
    protot.TimestampRange created_at = 4;
    nilt.Int64 created_by = 5;

    nilt.Int64 offset = 100;
    nilt.Int64 limit = 101;
    map<string, bool> sort = 102;
}

message ListPermissionsResponse {
    repeated string permissions = 1;
}

message GetPermissionRequest {
    int64 id = 1;
}

message GetPermissionResponse {
    string permission = 1;
}

// ----------------
// ---- GROUPS ----
// ----------------

message Group {
    int64 id = 1;
    string name = 2;
    string description = 3;
    protot.Timestamp created_at = 4;
    nilt.Int64 created_by = 5;
    protot.Timestamp updated_at = 6;
    nilt.Int64 updated_by = 7;
}

message CreateGroupRequest {
    string name = 1;
    nilt.String description = 2;
}

message CreateGroupResponse {
    Group group = 1;
}

message GetGroupRequest {
    int64 id = 1;
}

message GetGroupResponse {
    Group group = 1;
}

message ListGroupsRequest {
    reserved 1 to 99;
    nilt.Int64 offset = 100;
    nilt.Int64 limit = 101;
}

message ListGroupsResponse {
    repeated Group groups = 1;
}

message DeleteGroupRequest {
    int64 id = 1;
}

message DeleteGroupResponse {
    int64 affected = 1;
}

message ModifyGroupRequest {
    int64 id = 1;
    nilt.String name = 2;
    nilt.String description = 3;
}

message ModifyGroupResponse {
    Group group = 1;
}

message SetGroupPermissionsRequest {
    repeated string permissions = 1;
}

message SetGroupPermissionsResponse {
    repeated string created = 1;
    repeated string removed = 2;
    repeated string untouched = 3;
}

message ListGroupPermissionsRequest {
    int64 id = 1;
}

message ListGroupPermissionsResponse {
    repeated string permissions = 1;
}